fixed alignment on resume page

--- a/styling.css
+++ b/styling.css
@@ -234,6 +234,7 @@ nav a:hover{
         margin-bottom: 0;
     }
 .experience .timeOnJob{
+    margin-left: 5%;
     text-align: end;
 }
 
